--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.show-sql=true
+
 spring.rabbitmq.password=p@ssw0rd
 spring.rabbitmq.username=userok
