--- a/common-jpa/src/test/resources/application-test.properties
+++ b/common-jpa/src/test/resources/application-test.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM '
 spring.datasource.password=sasa
 spring.datasource.username=sasa
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
