added docker compose

--- a/core/src/main/resources/application-docker.properties
+++ b/core/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 spring.application.name=core
-server.port=8081
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/currency_bot
+spring.datasource.url=jdbc:postgresql://mypostgres:5432/currency_bot
 spring.datasource.password=root
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
@@ -9,5 +9,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 
+spring.rabbitmq.addresses=myrabbitmq:5672
 spring.rabbitmq.password=p@ssw0rd
 spring.rabbitmq.username=userok
