--- a/dispatcher/src/main/resources/application-docker.properties
+++ b/dispatcher/src/main/resources/application-docker.properties
@@ -1,12 +1,13 @@
 spring.application.name=dispatcher
-server.port=8080
+server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/currency_bot
+spring.datasource.url=jdbc:postgresql://mypostgres:5432/currency_bot
 spring.datasource.password=root
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.rabbitmq.addresses=myrabbitmq:5672
 spring.rabbitmq.password=p@ssw0rd
 spring.rabbitmq.username=userok
 
